UtahLiveDataTest/src/objects/IntegrationConfig__c.object
<CustomObject>
    <description>[Business] Stores Integration configuration</description>
    <fields>
        <fullName>Delimiter__c</fullName>
        <label>Delimiter</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Comma</fullName>
                    <default>true</default>
                    <label>Comma</label>
                </value>
                <value>
                    <fullName>Tab</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>InternalUniqueID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Uniquely identifies each record for data migration purpose only. It is auto populated by trigger in before insert context.</description>
        <externalId>true</externalId>
        <label>Internal Unique ID</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ProcessBatchSize__c</fullName>
        <description>Batch Size when processing input file</description>
        <inlineHelpText>Batch Size when processing input file</inlineHelpText>
        <label>Process Batch Size</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ProcessName__c</fullName>
        <description>Unique Process Name</description>
        <inlineHelpText>Unique Process Name</inlineHelpText>
        <label>Process Name</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>RecordBatchSize__c</fullName>
        <description>Batch Size when processing records</description>
        <inlineHelpText>Batch Size when processing records</inlineHelpText>
        <label>RecordBatchSize</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RejectDuplicateRecord__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Reject duplicate records</description>
        <inlineHelpText>Reject duplicate records</inlineHelpText>
        <label>Reject Duplicate Record</label>
        <type>Checkbox</type>
    </fields>
    <label>CFG: CSV Integration</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ProcessName__c</columns>
        <columns>ProcessBatchSize__c</columns>
        <columns>RecordBatchSize__c</columns>
        <columns>Delimiter__c</columns>
        <columns>RejectDuplicateRecord__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>INTC-{000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Integration Config</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>